<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.martin.personalenergytrainer.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textClockDate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextClock
            android:id="@+id/textClockTime"
            android:layout_below="@id/textClockDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="10:00 - 10:30"
            android:textAlignment="center"
            android:textSize="20sp" />
        <LinearLayout
            android:id="@+id/linLayMainScreenButtons"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="4"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btnNavigationProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/profile"/>
            <Button
                android:id="@+id/btnNavigationStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/stats"/>
            <Button
                android:id="@+id/btnNavigationSettings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/settings"/>
            <Button
                android:id="@+id/btnNavigationRefresh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/refresh"/>
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="29dp"
            android:progress="50"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
