<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.martin.personalenergytrainer.Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/linLayBlind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="3"
                android:text="@string/colourBlindMode"
                android:textSize="20sp" />
            <ToggleButton
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/timeFormat12"
            android:layout_below="@id/linLayBlind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/t12hrformat"
                android:textSize="20sp"/>
            <RadioButton
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/timeFormat24"
            android:layout_below="@id/timeFormat12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/t24hrformat"
                android:textSize="20sp"/>
            <RadioButton
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
